# mppi_generic_vendor

./: CMakeLists.txt  package.xml  rosdep.yaml
include/mppi/: version.h.in
include/mppi/controllers/: controller.cu  controller.cuh
include/mppi/controllers/MPPI/: mppi_controller.cu
include/mppi/core/: base_plant.hpp  buffered_plant.hpp
include/mppi/dynamics/autorally/: ar_nn_model.cu  ar_nn_model.cuh
include/mppi/sampling_distributions/smooth-MPPI/: smooth-MPPI.cu
include/mppi/utils/: logger.hpp
tests/dynamics/: ar_dynamics_nn_test.cu
tests/mppi_core/: base_plant_tester.cu  buffered_plant_tester.cu
